# gds-idea-ragchat-agent

./: README.md  example.env  helpers.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: issue_template.md
src/rag_chat_agent/: agent.py  config.py
src/rag_chat_agent/aws/: bedrock.py  dynamodb.py  guardrails.py  opensearch.py
src/rag_chat_agent/prompts/: prompt_templates.py  system_prompt.txt
src/rag_chat_agent/tools/: python_repl.py  rating.py  retriever.py  safer_repl.py
